--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -1,10 +1,10 @@
 $color-grey: #eee;
 $color-grey-light: #f5f5f5;
-$radius: 0px;
+$radius: 3px;
 $form-bg-color: rgb(255, 255, 255);
 $color-primary: #3464bd;
-$color-inputOk: #2bce39;
-$color-inputWrong: #ce2b2b;
+$color-inputOk: #ddffe0;
+$color-inputWrong: #ff6868;
 $form-focus: #ffffff;
 $form-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
 $button-box-shadow: 0 18px 35px rgba(50, 50, 93, 0.1), 0 8px 15px rgba(0, 0, 0, 0.07);
